[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ring-status"
version = "0.1.0"
description = "Monitor automático del estado de la pista Nordschleife"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "beautifulsoup4",
    "opencv-python",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
ring-status = "app.main:main"

[tool.pytest.ini_options]
addopts = "--cov=app"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"