[project]
name = "ring-status"
version = "0.1.0"
description = "Monitor automático del estado de la pista Nordschleife"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "beautifulsoup4",
    "opencv-python",
    "numpy",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]
